# rhelai-omni-chatter

./: .gitignore  CLAUDE.md  README.md  docker-compose.yaml  index.yaml  langflow-kind.yaml  langflow-openshift.yaml  langflow-pod.yaml  langflow-vllm-component.py  openshift-curl-test.sh  openshift-install.sh  openshift-lookfor-vllm.sh  openshift-test.sh  routes.txt  run.sh  test-llamastack.sh  test-run.sh
.github/workflows/: helm-release.yml
expr/: 2-intro-to-RAG.ipynb  requirements.txt
helm/anythingllm/: Chart.yaml  values.yaml
helm/dashy/: Chart.yaml  values.yaml
helm/docling-serve/: Chart.yaml  values.yaml
helm/guardrails-orchestrator/: Chart.yaml  values.yaml
helm/langflow/: Chart.yaml  values.yaml
helm/langflow-stack/: Chart.yaml  values.yaml
helm/litemaas/: Chart.yaml  values.yaml
helm/llama-stack/: Chart.yaml  values.yaml
helm/milvus/: Chart.yaml
helm/minio/: Chart.yaml  values.yaml
helm/n8n/: Chart.yaml  values.yaml
k8s/: vllm-cpu-servingruntime.yaml
langflow-components/: llamastack_embeddings.py
llama-stack-ui/: CLAUDE.md  README.md  app.py  config.yaml  conversations.json  pyproject.toml  requirements.txt  run.sh  start-dev-container.sh
llama-stack-ui/docs/: llama-stack-api-improvements.md
llama-stack-ui/modules/: api.py  config.py
llama-stack-ui/pages/: chat.py  documents.py  settings.py
llama-stack-ui/rag-examples/: ibm.txt  tmp-case.txt
llama-stack-ui/tests/: test-env.sh  test-guardrails.sh
openshift-custom-runtimes/: gpu-hardware-profile.yaml  vllm-gpu-servingruntime.yaml
tests/: test-gpus.sh  test-llamastack.sh
(+52 files in other folders)
